    - Fix external_runner (#371)
    - Improve handling of variably defined font and sketchpad element settings (#372)
    - Don't crash when moving sketchpad elements with variably defined positions (#373)
    - Don't crash when copy-pasting in loop table when no cells are selected (#374)
    - Fall back to z_index=0 when an invalid z_index has been specified for sketchpad elements (#375)

 -- Sebastiaan Mathot <sebastiaan@mantis>  Sat, 07 Nov 2015 16:51:44 +0100

opensesame (3.0.2-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Don't crash on non-ascii values in variable inspector
    - Fix crash on invalid OpenSesame script
    - Improved validation and quote handling in conditional statements (#356)
    - Fix typo in bug_report success notification
    - Fix incorrect URL in Windows installer
    - Fix canvas.copy() (#355)
    - Fix variable inspection (don't crash on empty values)
    - Fix a crash when renaming a variable to itself
    - Fix a crash when creating a linked copy of a non-existing item
    - [Mac OS] Fix a crash when restoring config (#360)
    - Safely decode input in syntax (fixes non-ascii text in Python forms)
  * Improvements
    - Improved validation of variable names in loop item
    - Improved validation of OpenSesame-script syntax
    - Improved exception handling (including run-status emoticons)

 -- Sebastiaan Mathot <sebastiaan@mantis>  Mon, 26 Oct 2015 14:31:00 +0100

opensesame (3.0.1-ubuntu1) vivid; urgency=medium

  * Bugs fixed
    - Fix crash on fallback_console reset
    - Catch syntax warnings in inline_script items
    - Fix deleting items from pool
  * Improvements
    - Give more informative error messages when using invalid variable names
    - Update auto_example plugin
    - Ignore 'undefined name' warnings when validating Python code (requires QProgEdit >= 3.1.0)
    - Update srbox plugin and add require_state_change_option
    - Add explanation how to suppress bug_report messages
